test/errors/executor/runtime_undeclared_identifier.ms
x = 1
x = noSuchThingy
x = 3
// Runtime Error: Undefined Identifier: 'noSuchThingy' is unknown in this context [line 2]
